--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "run-mock-server": "tsx ./mock-server.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
+    "@hono/zod-validator": "^0.7.3",
     "@hookform/resolvers": "^3.3.4",
     "@next/env": "^14.2.5",
     "@ngneat/falso": "^7.2.0",
@@ -33,6 +35,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "eslint-plugin-check-file": "^2.8.0",
+    "hono": "^4.9.9",
     "isomorphic-dompurify": "^2.14.0",
     "lucide-react": "^0.378.0",
     "marked": "^12.0.2",
